fix: Icons: Checkboxes and radio boxes were sometimes not showing in menu's under Abyss rn=
(integrated from komodo (trunk) change 82996 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13962 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/icons_rules.less
+++ b/src/chrome/komodo/skin/plat/shared/icons_rules.less
@@ -54,6 +54,7 @@ menuitem[type="checkbox"]
         background-image: @icon-checkbox;
         background-repeat: no-repeat;
         background-position: center;
+        min-height: 17px;
     }
 
     &[checked="true"] > .menu-iconic-left
@@ -74,6 +75,7 @@ menuitem[type="radio"]
         background-image: @icon-radio;
         background-repeat: no-repeat;
         background-position: top left;
+        min-height: 17px;
     }
 
     &[checked="true"] > .menu-iconic-left,
